--- a/workshop-fetch/package.json
+++ b/workshop-fetch/package.json
@@ -7,5 +7,8 @@
     "format": "prettier --write \"src/**/*.js\"",
     "lint": "prettier --check \"src/**/*.js\"",
     "test": "yarn lint"
+  },
+  "dependencies": {
+    "tailwindcss": "^3.1.4"
   }
 }
